--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#b55e28" />
     <title>PWA FEPEX</title>
 
     <link rel="stylesheet" href="public/assets/css/styles.css" />
+    <link
+      rel="shortcut icon"
+      href="public/assets/image/logo.webp"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="row">
       <div class="column">
         <div class="card card-primary">
-          <p>Assista as Apresentações da V FEPEX</p>
+          <img src="public/assets/image/logo.webp" alt="V FEPEX" width="200" />
+          <p><strong>Assista as Apresentações da V FEPEX</strong></p>
         </div>
       </div>
     </div>
