--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#9932CC" />
+    <meta name="theme-color" content="#022e43" />
     <title>PWA FEPEX</title>
 
     <link rel="stylesheet" href="public/assets/css/styles.css" />
