--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     />
   </head>
   <body>
-    <div class="card card-primary">
-      <img src="public/assets/image/logo.webp" alt="V FEPEX" width="200" />
-      <p><strong>Assista as Apresentações da V FEPEX</strong></p>
+    <div class="row">
+      <div class="card card-primary">
+        <img src="public/assets/image/logo.webp" alt="V FEPEX" width="200" />
+        <p><strong>Assista as Apresentações da V FEPEX</strong></p>
+      </div>
     </div>
 
     <div class="main"></div>
