--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="public/assets/css/styles.css" />
     <link
       rel="shortcut icon"
-      href="public/assets/image/logo.webp"
+      href="public/assets/image/logo.jpg"
       type="image/x-icon"
     />
   </head>
   <body>
     <div class="row">
       <div class="card card-primary">
-        <img src="public/assets/image/logo.webp" alt="V FEPEX" width="200" />
+        <img src="public/assets/image/logo.jpg" alt="V FEPEX" width="200" />
         <p><strong>Assista as Apresentações da V FEPEX</strong></p>
       </div>
     </div>
