--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="public/assets/image/logo96.png"
       type="image/x-icon"
     />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <div class="row">
