--- a/index.html
+++ b/index.html
@@ -6,24 +6,47 @@
     <meta name="theme-color" content="#022e43" />
     <title>PWA FEPEX</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="public/assets/css/styles.css" />
     <link
       rel="shortcut icon"
       href="public/assets/image/logo96.png"
       type="image/x-icon"
     />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="public/assets/image/logo192.png" />
+
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
-    <div class="row">
-      <div class="card card-primary">
-        <img src="public/assets/image/logo.png" alt="V FEPEX" width="200" />
-        <p><strong>Assista as Apresentações da V FEPEX</strong></p>
+    <nav>
+      <div class="nav-wrapper indigo darken-4">
+        <div class="row">
+          <div class="col l12">
+            <a href="#" class="brand-logo">
+              <img src="public/assets/image/logo96.png" width="52" />
+            </a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="#">Apresentações Feitas na VFepex</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <div class="main">
+      <div class="row">
+        <div class="trabalhos"></div>
       </div>
     </div>
 
-    <div class="main"></div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script type="module" src="public/assets/js/script.js"></script>
   </body>
 </html>
