--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       type="image/x-icon"
     />
     <link rel="apple-touch-icon" href="public/assets/image/logo192.png" />
-
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <nav>
