--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#022e43" />
     <title>PWA FEPEX</title>
+    <meta name="theme-color" content="#022e43" />
+
+    <link
+      rel="shortcut icon"
+      href="public/assets/image/logo96.png"
+      type="image/x-icon"
+    />
 
     <link
       rel="stylesheet"
@@ -15,11 +21,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="public/assets/css/styles.css" />
-    <link
-      rel="shortcut icon"
-      href="public/assets/image/logo96.png"
-      type="image/x-icon"
-    />
   </head>
   <body>
     <nav>
@@ -39,7 +40,25 @@
 
     <div class="main">
       <div class="row">
-        <div class="trabalhos"></div>
+        <div class="trabalhos">
+          <div class="col l4 m6 s12">
+            <div class="card small indigo darken-4">
+              <div class="card-content white-text">
+                <p class="small-text">Título do Trabalho</p>
+              </div>
+              <div class="card-action">
+                <a href="#" title="Trabalho Escrito"
+                  ><i class="material-icons orange-text">picture_as_pdf</i></a
+                >
+                <a href="#" title="Apresentação"
+                  ><i class="material-icons red-text">play_circle_filled</i></a
+                >
+                <span class="badge blue darken-3 white-text">Área</span>
+                <span class="badge indigo darken-3 white-text">Modalidade</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
