--- a/index.html
+++ b/index.html
@@ -1,68 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PWA FEPEX</title>
-    <meta name="theme-color" content="#022e43" />
 
-    <link
-      rel="shortcut icon"
-      href="public/assets/image/logo96.png"
-      type="image/x-icon"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PWA FEPEX</title>
+  <meta name="theme-color" content="#022e43" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="public/assets/css/styles.css" />
-  </head>
-  <body>
-    <nav>
-      <div class="nav-wrapper indigo darken-4">
-        <div class="row">
-          <div class="col l12">
-            <a href="#" class="brand-logo">
-              <img src="public/assets/image/logo96.png" width="52" />
-            </a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="#">Apresentações Feitas na VFepex</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+  <link rel="shortcut icon" href="public/assets/image/logo96.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="public/assets/css/styles.css" />
+</head>
 
-    <div class="main">
+<body>
+  <nav>
+    <div class="nav-wrapper amber darken-4">
       <div class="row">
-        <div class="trabalhos">
-          <div class="col l4 m6 s12">
-            <div class="card small indigo darken-4">
-              <div class="card-content white-text">
-                <p class="small-text">Título do Trabalho</p>
-              </div>
-              <div class="card-action">
-                <a href="#" title="Trabalho Escrito"
-                  ><i class="material-icons orange-text">picture_as_pdf</i></a
-                >
-                <a href="#" title="Apresentação"
-                  ><i class="material-icons red-text">play_circle_filled</i></a
-                >
-                <span class="badge blue darken-3 white-text">Área</span>
-                <span class="badge indigo darken-3 white-text">Modalidade</span>
-              </div>
-            </div>
-          </div>
+        <div class="col l12">
+          <a href="#" class="brand-logo">
+            <img src="public/assets/image/logo96.png" width="52" />
+          </a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="#">Apresentações Feitas na VFepex</a></li>
+          </ul>
         </div>
       </div>
     </div>
+  </nav>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script type="module" src="public/assets/js/script.js"></script>
-  </body>
+  <div class="main">
+    <div class="row">
+      <div class="trabalhos">
+
+        <div class="col l4 m6 s12">
+          <div class="card small indigo darken-4">
+            <div class="card-content white-text">
+              <p class="small-text">Título do Trabalho</p>
+            </div>
+            <div class="card-action">
+              <a href="#" title="Trabalho Escrito"><i class="material-icons orange-text">picture_as_pdf</i></a>
+              <a href="#" title="Apresentação"><i class="material-icons red-text">play_circle_filled</i></a>
+              <span class="badge blue darken-3 white-text">Área</span>
+              <span class="badge indigo darken-3 white-text">Modalidade</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script type="module" src="public/assets/js/script.js"></script>
+</body>
+
 </html>
