--- a/index.html
+++ b/index.html
@@ -1,51 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#022e43" />
-    <title>PWA FEPEX</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="public/assets/css/styles.css" />
-    <link
-      rel="shortcut icon"
-      href="public/assets/image/logo96.png"
-      type="image/x-icon"
-    />
-    <link rel="apple-touch-icon" href="public/assets/image/logo192.png" />
-    <link rel="manifest" href="manifest.json" />
-  </head>
-  <body>
-    <nav>
-      <div class="nav-wrapper indigo darken-4">
-        <div class="row">
-          <div class="col l12">
-            <a href="#" class="brand-logo">
-              <img src="public/assets/image/logo96.png" width="52" />
-            </a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="#">Apresentações Feitas na VFepex</a></li>
-            </ul>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#022e43" />
+  <title>PWA FEPEX</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="public/assets/css/styles.css" />
+  <link rel="shortcut icon" href="public/assets/image/logo96.png" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="public/assets/image/logo192.png" />
+  <link rel="manifest" href="manifest.json" />
+</head>
+
+<body>
+  <nav>
+    <div class="nav-wrapper amber darken-4">
+      <div class="row">
+        <div class="col l12">
+          <a href="#" class="brand-logo">
+            <img src="public/assets/image/logo96.png" width="52" />
+          </a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="#">Apresentações Feitas na VFepex</a></li>
+          </ul>
         </div>
       </div>
-    </nav>
-
-    <div class="main">
-      <div class="row">
-        <div class="trabalhos"></div>
-      </div>
     </div>
+  </nav>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script type="module" src="public/assets/js/script.js"></script>
-  </body>
+  <div class="main">
+    <div class="row">
+      <div class="trabalhos"></div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script type="module" src="public/assets/js/script.js"></script>
+</body>
+
 </html>
